Wed Aug  8 19:55:34 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.c (test_coupling): used analytic expressions for the
 	exact values to problems with insufficient precision

Thu Jul 12 15:25:04 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): corrected tests to use exact
	floating point arguments near singularities.

	* legendre_Qn.c (gsl_sf_legendre_Q0_e): removed unnecessary error
 	terms that I added
	(gsl_sf_legendre_Q1_e): removed unnecessary error terms that I
 	added

Wed Jul 11 16:06:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* error.h: moved domain, overflow and underflow errors into
 	macros, return Nan for domain error, Inf for overflow.

Tue Jul 10 22:00:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* erfc.c (gsl_sf_log_erfc_e): introduce an additional log(erfc)
 	branch to prevent loss of accuracy for small x

	* test_sf.c (test_zeta): increased tolerance on zeta function test
 	to take into account differences in rounding

2001-07-10  Brian Gough  <bjg@hppav.local>

	* legendre_Qn.c (gsl_sf_legendre_Q0_e): use (log1p(x) - log1p(-x))
	instead of log((1+x)/(1-x)), for accuracy
	(gsl_sf_legendre_Q1_e): use (log1p(x) - log1p(-x)) instead of
	log((1+x)/(1-x)), for accuracy
	(gsl_sf_legendre_Q0_e): improve error estimate near singular
	points
	(gsl_sf_legendre_Q1_e): improve error estimate near singular
	points
	(gsl_sf_legendre_Q0_e): fixed incorrect factor of 2 in asymptotic
	expansion

	* check.h (CHECK_UNDERFLOW): provide macro for checking results
	for underflow

Fri Jul  6 20:16:19 2001  Brian Gough  <bjg@network-theory.co.uk>

	* zeta.c (riemann_zeta1m_slt0): added a function to compute
 	zeta(1-s) without loss of accuracy for s near zero, as used by the
 	reflection formula.  This fixes a bug in the accuracy of results
 	of zeta(-x) for small x, where loss of precision previously
 	occurred by evaluating 1-x.

2001-07-06  Brian Gough  <bjg@network-theory.co.uk>
